# volc_ai_realtime_agent

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md  fetch_ai_interaction.py  fetch_docs.py  package.json  search_agent_framework.ts  search_asr_tts.ts  search_dds.ts  search_dds_bridge.ts  search_harness.ts  search_isaac_sim.ts  search_mcp_skills.ts  search_multi_protocol.ts  search_offline_asr.ts  search_openclaw.ts  search_openclaw_detail.ts  search_orin_inference.ts  search_qwen_audio.ts  search_realtime_rtc.ts  search_robot_arch.ts  search_s2s.ts  search_test.ts  search_tts_local.ts  search_volc_offline.ts  search_volc_rtc_cpp.ts  search_volcengine.py  volc_ai_interaction.md  volc_ai_interaction_demo.md  volc_ai_interaction_quickstart.md  volc_engine_linux_demo.md  volc_engine_overview.md  volc_engine_search_results.md  火山引擎AI机器人控制系统-基于AI音视频互动方案.md  火山引擎AI机器人控制系统-集成指南.md  火山引擎AI机器人控制系统调研报告.md
.github/workflows/: ci.yml  notify.yml
.ssh/: id_ed25519.pub
config/: token.conf  token.conf.example  volc.json.example
docs/: cloud_setup.md
docs/plan/: CICD_webhook_plan.md  token_plan.md  volc_rtc_plan.md  web_plan.md
docs/research/: CICD_webhook.md  token.md  volc_rtc.md  web.md
docs/workflows/: ci_example.yml
linux-rtc-client/: CMakeLists.txt  README.md
linux-rtc-client/include/: RobotRTCClient.h
linux-rtc-client/src/: RobotRTCClient.cpp  main.cpp
robot-control-server/: requirements.txt  server.py
robot-control-server/tools/: __init__.py  knowledge.py  robot.py  search.py
robot-control-server/utils/: __init__.py  config.py  logging.py
robot-control-system/: QUICK_START.md  README.md  requirements.txt
scripts/: build.sh  ci.sh  clean.sh  cloud_build.py  done.sh  download-sdk.sh  lint.sh  new-plan.sh  new-research.sh  show-plan.sh  sync-pull.sh  sync-push.sh  sync_to_cloud.py  test-integration.sh  test-unit.sh  test.sh
scripts/web/: README.md  cli.sh  (+4 more)
web-demo/: index.html  package.json  vite.config.ts
web_client/: README.md
(+36 files in other folders)
